# aws-scripts

./: README.md
certificate-generator/: .env.example  pyproject.toml
certificate-generator/certificate_generator/entities/: Certificate_Manager.py
dynamodb-backup-restore/: .env.example  README.md  main.py  pyproject.toml
dynamodb-backup-restore/dynamoDB/: DynamoDBManager.py
dynamodb-backup-routine/: README.md  deploy-script.sh
dynamodb-backup-routine/infra/: package-lock.json  package.json  serverless.yml
dynamodb-backup-routine/infra/serverless/custom/: variables.yml
dynamodb-backup-routine/infra/serverless/resources/: s3.yml  sqs.yml  ssm.yml
dynamodb-backup-routine/service/: .eslintrc  .gitignore  package-lock.json  package.json  serverless.yml  tsconfig.json
dynamodb-backup-routine/service/serverless/custom/: variables.yml
dynamodb-backup-routine/service/serverless/provider/: environment.yml
dynamodb-backup-routine/service/serverless/resources/: cloudwatch.yml
dynamodb-backup-routine/service/serverless/resources/iam/: backupExportToS3Role.yml  backupProvisionTablesRole.yml  backupTriggerRole.yml  backupWriteItemsRole.yml
dynamodb-backup-routine/service/src/: trigger.ts
dynamodb-backup-routine/service/src/dynamodb/: DynamoManager.ts
dynamodb-backup-routine/service/src/helpers/: constants.ts  interfaces.ts
dynamodb-backup-routine/service/src/lambda/: exportItemsToS3.ts  provisionTables.ts  writeItems.ts
dynamodb-backup-routine/service/src/s3/: S3Manager.ts
dynamodb-backup-routine/service/src/sqs/: SqsHandler.ts
dynamodb-backup-routine/service/src/sts/: StsManager.ts
dynamodb-export-to-s3/: .gitignore  pyproject.toml
insecure_access_keys_hunt/: .gitignore  main.py  pyproject.toml  ruff.toml
insecure_access_keys_hunt/src/: handler.py  main.py
insecure_access_keys_hunt/src/iam/: IamManager.py
insecure_access_keys_hunt/src/utils/: utils.py
insecure_access_keys_hunt/tests/: iam.py
insecure_access_keys_hunter/: .gitignore  README.md  mypy.ini  pyproject.toml
insecure_access_keys_hunter/src/: main.py
secrets-migration/: pyproject.toml
secrets-migration/secrets_migration/: constants.py  main.py
secrets-migration/secrets_migration/secrets_manager/: Secrets_Manager.py
