[tool.poetry]
name = "certificate-generator"
version = "0.1.0"
description = "Gerador de certificados SSL/TLS na AWS via Certificate Manager"
authors = ["Kelder Passos <kelder.passos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
botocore = "^1.35.13"
boto3 = "^1.35.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
