[tool.poetry]
name = "dynamodb-backup-restore"
version = "0.1.0"
description = "Projeto para escrever itens vindo de arquivos de backup em tabelas jรก existentes"
authors = ["Kelder Passos <kelder.passos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
boto3 = "^1.35.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"