[tool.poetry]
name = "dynamodb-export-to-s3"
version = "0.1.0"
description = "Backup das tabelas de DynamoDB no S3"
authors = ["Kelder Passos <kelder.passos@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.58"
pytest = "^7.4.2"
ipykernel = "^6.29.5"
pre-commit = "^3.7.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
