[project]
name = "insecure-access-keys-hunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.35.85",
    "boto3>=1.35.84",
    "moto>=5.0.24",
    "types-boto3>=1.35.86",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
# [tool.mypy]
# strict = true
# # Start off with these
# warn_unused_configs = true
# warn_redundant_casts = true
# warn_unused_ignores = true

# Getting these passing should be easy
# strict_equality = true
# strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
# check_untyped_defs = true