[project]
name = "insecure-access-keys-hunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.35.85",
    "boto3>=1.35.84",
    "moto>=5.0.24",
    "types-boto3>=1.35.98",
]


